--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ddf-time-utils",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Gapminder DDF time utils",
   "main": "index.js",
   "scripts": {
@@ -24,8 +24,9 @@
   },
   "homepage": "https://github.com/valor-software/ddf-time-utils#readme",
   "dependencies": {
-    "moment": "2.14.1",
-    "lodash": "4.7.0"
+    "es6-symbol": "3.1.0",
+    "lodash": "4.7.0",
+    "moment": "2.14.1"
   },
   "devDependencies": {
     "chai": "3.5.0",
