--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ddf-time-utils",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Gapminder DDF time utils",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/valor-software/ddf-time-utils#readme",
   "dependencies": {
     "es6-symbol": "3.1.0",
+    "get-own-property-symbols": "0.9.2",
     "lodash": "4.7.0",
     "moment": "2.14.1"
   },
