--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ddf-time-utils",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Gapminder DDF time utils",
   "main": "index.js",
   "scripts": {
@@ -24,8 +24,7 @@
   },
   "homepage": "https://github.com/valor-software/ddf-time-utils#readme",
   "dependencies": {
-    "es6-symbol": "3.1.0",
-    "get-own-property-symbols": "0.9.2",
+    "core-js": "2.4.1",
     "lodash": "4.7.0",
     "moment": "2.14.1"
   },
