--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ddf-time-utils",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Gapminder DDF time utils",
   "main": "./lib/index.js",
   "scripts": {
@@ -30,28 +30,28 @@
   },
   "homepage": "https://github.com/valor-software/ddf-time-utils#readme",
   "dependencies": {
-    "@types/lodash": "4.14.85",
-    "@types/moment": "2.13.0",
-    "@types/node": "8.0.53",
-    "lodash": "4.17.4",
-    "moment": "2.19.2"
+    "lodash": "4.17.10",
+    "moment": "2.22.2"
   },
   "devDependencies": {
-    "@types/chai": "4.0.5",
+    "@types/lodash": "4.14.109",
+    "@types/moment": "2.13.0",
+    "@types/node": "10.3.1",
+    "@types/chai": "4.1.3",
     "@types/deep-diff": "0.0.31",
-    "@types/es6-shim": "0.31.35",
-    "@types/mocha": "2.2.44",
+    "@types/es6-shim": "0.31.37",
+    "@types/mocha": "5.2.1",
     "chai": "4.1.2",
-    "codecov": "3.0.0",
+    "codecov": "3.0.2",
     "compare-version": "0.1.2",
-    "conventional-changelog": "1.1.7",
-    "conventional-changelog-cli": "1.3.5",
-    "conventional-github-releaser": "2.0.0",
+    "conventional-changelog": "2.0.0",
+    "conventional-changelog-cli": "2.0.0",
+    "conventional-github-releaser": "3.1.0",
     "istanbul": "0.4.5",
-    "mocha": "4.0.1",
-    "sinon": "4.1.2",
-    "sinon-chai": "2.14.0",
-    "ts-node": "^3.3.0",
-    "typescript": "2.6.1"
+    "mocha": "5.2.0",
+    "sinon": "5.0.10",
+    "sinon-chai": "3.1.0",
+    "ts-node": "6.1.0",
+    "typescript": "2.9.1"
   }
 }
